# sunpy

./: ###3rd iteration.py  .bzrignore  .codecov.yaml  .codespellrc  .coveragerc  .coveralls.yml  .cruft.json  .editorconfig  .flake8  .flake8.rej  .gitattributes  .gitignore  .gitignore.rej  .gitmodules  .isort.cfg  .isort.cfg.rej  .landscape.yml  .mailmap  .pep8speaks.yml  .pre-commit-config.yaml  .pre-commit-config.yaml.rej  .pre-commit-config.yml  .readthedocs.yaml  .readthedocs.yml  .rtd-environment.yml  .ruff.toml  .ruff.toml.rej  .spyderworkspace  .test_package_pins.txt  .travis.pip.wheel  .travis.yml  .zenodo.json  CHANGELOG  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  CITATION.md  CITATION.rst  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  (+69 more)
.circleci/: codecov_upload.sh  config.yml  early_exit.sh
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md  stale.yml
.github/ISSUE_TEMPLATE/: anything_else.md  bug_report.md  config.yml  feature_request.md  other_issue.md  performance.md  whatever_else.md
.github/PULL_REQUEST_TEMPLATE/: pr_template.md  standard_pull_request.md
.github/workflows/: asv-initial.yml  asv-regular.yml  cancel_ci.yml  cancel_workflows.yml  changelog_bot.yml  ci.yml  ci.yml.rej  ci_benchmarks.yml  coordinates.yml  cron.yml  extra_ci.yml  label_sync.yml  learn-github-actions.yml  notify.yml  phep3-compliance.yml  publish.yml  pyhc-actions.yml  pyhc-environment-compatibility.yml  python-test-workflow.yml  run_tox.yml  scheduled_builds.yml  spec0-update.yml  stale_bot.yml  sub_package_update.yml  tests.yml
.jupyter/: jupyter_notebook_config.py
.pyinstaller/: run_sunpy_tests.py  run_tests.py
.pyinstaller/hooks/: hook-sunpy.py
api/: sunpy.cm.cm.show_colormaps.rst  sunpy.image.rescale.reshape_image_to_4d_superpixel.rst  sunpy.util.config.load_config.rst  sunpy.util.config.print_config.rst
benchmarks/: array_creation.py  benchmark.py  benchmarks_for_is_time.py  benchmarks_for_map.py  benchmarks_for_parse_time.py  benchmarks_for_resample.py  coordinates.py  map.py  time.py  time_test3.py  time_test3_cuda.py  time_testr.pro  time_testr.py
binder/: environment.yml
changelog/: #6694 .bug.rst  1983.feature.rst  2366.feature.rst  2408.trivial.rst  2503.feature.rst  2507.feature.rst  2515.breaking.rst  2572.bugfix.rst  2598.trivial.rst  2603.feature.rst  2611.breaking.rst  2613.trivial.rst  2621.bugfix.rst  2624.doc.rst  2627.bugfix.rst  2635.bugfix.rst  2636.bugfix.rst  2637.trivial.rst  2638.breaking.rst  2642.bugfix.rst  2644.trivial.rst  2646.bugfix.rst  2651.bugfix.rst  2655.trivial.1.rst  2655.trivial.2.rst  2655.trivial.rst  2656.doc.rst  2658.bugfix.rst  2660.trivial.rst  2663.breaking.rst  2663.feature.rst  2663.removal.rst  2666.breaking.rst  2666.removal.rst  2667.trivial.rst  2671.trivial.rst  2676.breaking.rst  2679.bugfix.rst  2681.feature.rst  2682.doc.rst  (+1444 more)
changelog/newfragments/: 8038.trivial.rst
continuous-integration/: python3.sh
continuous-integration/travis/: install_linux.sh  install_osx.sh  openjpeg.sh
data/: 20120620_EVE_L0CS_DIODES_1m.txt  xrs_2s.csv
data_manager/: data_manager.db
dev/: __init__.py  plot_fits.py
doc/: README.md
doc/diagrams/: core_datatypes.dia  map_class_hierarchy.dia  package_layout.dia
doc/examples/: rgb_composite.py  rgb_composite.ui
doc/source/: Makefile  about.rst  bugs.rst  cite.rst  conf.py  dev.rst  index.rst  make.bat  reference.rst  release.rst  requirements.txt  resources.rst  ssw.rst  sunpydata.sqlite  testingfeatures.rst
docs/: .rtd_requirements.txt  Makefile  README.md  README.txt  changelog.rst  citation.rst  coc.rst  conf.py  dev.rst  index.rst  installation.rst  make.bat  nitpick-exceptions  references.bib  requirements.txt  rtd_requirements.txt  stability.rst  testingfeatures.rst  tour.rst
docs/_templates/: gallery_sidebar.html  layout.html
docs/code_ref/: cm.rst  coordinates.rst  data.rst  database.rst  image.rst  index.rst  instr.rst  io.rst  known_issues.rst  lightcurve.rst  map.rst  net.rst  physics.rst  roi.rst  spectra.rst  stability.rst  sun.rst  sunpy.rst  sunpy_stability.yaml  time.rst  timeseries.rst  troubleshooting.rst  util.rst  visualization.rst  wcs.rst
examples/: 2011_06_07_sampledata_overview.py  AIA_limb_STEREO.py  Finding_Local_Peaks_in_Solar_Data.py  LineAnimator_examples.py  README.txt  SDO_to_STEREO_Coordinate_Conversion.py  aia_example.py  base_and_running_difference_mapcubes.py  brightness_pixel_location.py  finding_masking_bright_pixels.py  finegrained_plot.py  goes_hek_m25.py  great_arc_example.py  hmi_synoptic_maps.py  image_bright_regions_gallery_example.py  lat_lon_lines.py  loop_edge_enhance.py  magnetogram_active_regions.py  map_data_histogram.py  map_editcolormap.py  map_from_numpy_array.py  map_resampling_and_superpixels.py  maps_example.py  mask_disk.py  masking_hot_pixels.py  off_limb_enhance.py  overplot_hek_polygon.py  parse_time.py  plot_aia_example.py  plot_goes_hek_m25.py  plot_map_editcolormap.py  plot_maps_example.py  plot_sample_images.py  power_spectra_example.py  remote_data_manager.py  searching_vso.py  simple_differential_rotation.py  skip_AIA_limb_STEREO.py  skip_timeseriesmetadata_example.py  solar_cycle_example.py  (+5 more)
examples_explanation/: compare_rotation_results.py  comparing_rotation_models.py
joss_paper/: author_processing.py  go1520110607.fits  joss_paper_plot.py  matplotlibrc  metadata.yml  paper.bib  paper.md
licenses/: GLUE.rst  LICENSE.rst  README.rst  SUNPY.rst  TEMPLATE_LICENSE.rst  TOWNCRIER.rst
requirements/: README.md  README.rst  base.txt  dev.txt  docs.txt  extra.txt  rtd.txt
sunpy/: .gitignore  CITATION.rst  Map.py  MapCube.py  Sun.py  __init__.py  _compiler.c  conftest.py  version.py
tools/: gen_tutorial_graph.py  generate_github_changelog.py  generate_releaserst.xsh  hek_mkcls.py  hektemplate.py  mac_install.py  pre-commit.sh  resize_jp2.py  send_matrix_message.xsh  skip-rtd.sh  unify_section_headings.py  update_attrs_json.py  update_extern.py  update_zenodo.py  version_bumps.py  write_changelog_entry.py
(+2647 files in other folders)
