[metadata]
name = sunpy
provides = sunpy
description = "SunPy: Python for Solar Physics"
long_description = file: README.rst
long_description_content_type = text/x-rst
author = The SunPy Community
author_email = sunpy@googlegroups.com
license = BSD 2-Clause
license_file = LICENSE.rst
url = https://sunpy.org
edit_on_github = True
github_project = sunpy/sunpy
platform = any
keywords = solar physics, solar, science, sun, wcs, coordinates
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
python_requires = >=3.7
packages = find:
include_package_data = True
setup_requires =
  setuptools_scm
install_requires =
  astropy>=4.0.3
  numpy>=1.16.0
  parfive[ftp]>=1.1.0

[options.extras_require]
# The list of available extras is also in the installation docs, if you add or remove one please edit it there as well.
asdf =
  asdf
dask =
  dask[array]
database =
  sqlalchemy
instr =
  matplotlib>=2.2.2
  pandas>=0.23.0
  scipy>=1.2.0
image =
  scikit-image
  scipy>=1.2.0
jpeg2000 =
  glymur!=0.9.0
map =
  matplotlib>=2.2.2
  scipy>=1.2.0
net =
  beautifulsoup4
  pandas>=0.23.0
  drms>=0.6
  python-dateutil
  tqdm
  zeep
timeseries =
  h5netcdf>=0.8.1
  matplotlib>=2.2.2
  pandas>=0.23.0
visualization =
  matplotlib>=2.2.2
tests =
  pytest-astropy >= 0.8  # 0.8 is the first release to include filter-subpackage
  pytest-doctestplus >= 0.5 # We require the newest version of doctest plus to use +IGNORE_WARNINGS
  pytest-mock
  pytest-mpl >= 0.12
  tox
  jplephem  # For some coordinates tests
docs =
  astroquery
  jplephem
  reproject
  ruamel.yaml
  sphinx-automodapi
  sphinx-gallery>=0.7.0 # First to include the mini-galleries directive
  sphinx>=2
  sunpy-sphinx-theme
  towncrier
  packaging

[options.packages.find]
exclude = sunpy._dev

[options.entry_points]
asdf_extensions =
  sunpy = sunpy.io.special.asdf.extension:SunpyExtension

[tool:pytest]
testpaths = "sunpy" "docs"
norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples" "sunpy[/\]_dev" ".jupyter" ".history" "tools" "sunpy[\/]extern"
doctest_plus = enabled
doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
addopts = --doctest-rst --doctest-ignore-import-errors -p no:unraisableexception -p no:threadexception
asdf_schema_tests_enabled = true
asdf_schema_root = sunpy/io/special/asdf/schemas/
mpl-results-path = figure_test_images
mpl-use-full-test-name = True
markers =
    remote_data: marks this test function as needing remote data.
    online: marks this test function as needing online connectivity.
    figure: marks this test function as using hash-based Matplotlib figure verification. This mark is not meant to be directly applied, but is instead automatically applied when a test function uses the @sunpy.tests.helpers.figure_test decorator.
    flaky
    array_compare
    mpl_image_compare
remote_data_strict = True
# Pin junit behaviour; we might want to update this to xunit2 at some point
junit_family=xunit1
filterwarnings =
    error
    error::sunpy.util.exceptions.SunpyDeprecationWarning
    # Do not fail on pytest config issues (i.e. missing plugins) but do show them
    always::pytest.PytestConfigWarning
    #
    # A list of warnings to ignore follows. If you add to this list, you MUST
    # add a comment or ideally a link to an issue that explains why the warning
    # is being ignored
    #
    #
    # See https://github.com/spacetelescope/asdf/issues/789
    ignore:direct construction of AsdfSchemaFile has been deprecated
    ignore:direct construction of AsdfSchemaItem has been deprecated
    ignore:direct construction of AsdfSchemaExampleItem has been deprecated
    # See https://github.com/Cadair/parfive/issues/41
    ignore:The loop argument is deprecated
    # These warnings are raised on travis due to something odd about numpy installation,
    # but don't impact the tests
    ignore:numpy.ufunc size changed:RuntimeWarning
    # See https://github.com/mvantellingen/python-zeep/issues/956
    ignore:defusedxml.lxml is no longer supported:DeprecationWarning
    # See https://github.com/aio-libs/aiohttp/issues/4842
    ignore:"@coroutine" decorator is deprecated
    # See https://github.com/spacetelescope/asdf/issues/789
    ignore:direct construction of AsdfSchemaFile has been deprecated
    ignore:direct construction of AsdfSchemaItem has been deprecated
    ignore:direct construction of AsdfSchemaExampleItem has been deprecated
    # See https://github.com/scikit-image/scikit-image/issues/4848
    ignore:Converting `np.inexact` or `np.floating` to a dtype is deprecated
    # See https://github.com/astropy/astropy/pull/10570
    ignore:leap-second auto-update failed
    # See https://github.com/astropy/extension-helpers/issues/23
    ignore:Distutils was imported before Setuptools
    # Figure tests use agg backend so show doesn't work but we use it in peek
    ignore:Matplotlib is currently using agg, which is a non-GUI backend, so cannot show the figure.
    # Ignore doctest issues: docs/guide/tour.rst
    ignore:File may have been truncated*
    # Some tests use data that have dates in the future and ERFA does not like.
    ignore:ERFA function "d2dtf"*
    ignore:ERFA function "dtf2d"*
    # Currently helio makes unverified requests - this filter should be removed when
    # https://github.com/sunpy/sunpy/issues/4401 is fixed
    ignore:Unverified HTTPS request

[pycodestyle]
max_line_length = 100

[flake8]
max-line-length = 100
exclude =
    .git,
    __pycache__,
    docs/conf.py,
    build,
    sunpy/data/sample.py,
    sunpy/extern/**,
rst-directives =
    plot

[isort]
balanced_wrapping = True
skip=sunpy/extern/,sunpy/cm/__init__.py,docs/conf.py
default_section = THIRDPARTY
include_trailing_comma = True
known_astropy = astropy, asdf
known_first_party = sunpy
length_sort = False
length_sort_sections=stdlib
line_length = 110
multi_line_output = 3
no_lines_before = LOCALFOLDER
sections = STDLIB, THIRDPARTY, ASTROPY, FIRSTPARTY, LOCALFOLDER

[coverage:run]
omit =
  sunpy/conftest.py
  sunpy/cython_version*
  sunpy/*setup*
  sunpy/extern/*
  sunpy/*/tests/*
  sunpy/version*
  sunpy/__init__*
  sunpy/data/sample.py
  sunpy/data/_sample.py
  */sunpy/conftest.py
  */sunpy/cython_version*
  */sunpy/*setup*
  */sunpy/extern/*
  */sunpy/*/tests/*
  */sunpy/version*
  */sunpy/__init__*
  */sunpy/data/sample.py
  */sunpy/data/_sample.py

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
