[metadata]
name = sunpy
provides = sunpy
description = SunPy core package: Python for Solar Physics
long_description = file: README.rst
long_description_content_type = text/x-rst
author = The SunPy Community
author_email = sunpy@googlegroups.com
license = BSD 2-Clause
license_files = LICENSE.rst
url = https://sunpy.org
download_url = https://pypi.org/project/sunpy/
project_urls=
  Source Code = https://github.com/sunpy/sunpy/
  Documentation = https://docs.sunpy.org/
  Changelog = https://docs.sunpy.org/en/stable/whatsnew/changelog.html
  Issue Tracker = https://github.com/sunpy/sunpy/issues
edit_on_github = True
github_project = sunpy/sunpy
platform = any
keywords = solar physics, solar, science, sun, wcs, coordinates
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
python_requires = >=3.9
packages = find:
include_package_data = True
setup_requires =
  setuptools_scm
install_requires =
  astropy>=5.0.0
  numpy>=1.21.0
  packaging>=19.0
  parfive[ftp]>=1.2.0

[options.extras_require]
# The list of available extras is also in the installation docs, if you add or remove one please edit it there as well.
asdf =
  asdf-astropy>=0.1.1
  asdf>=2.8.0
dask =
  dask[array]>=2021.4.0
database =
  sqlalchemy>=1.3.4
image =
  scikit-image>=0.18.0
  # !=1.10.0 due to https://github.com/scipy/scipy/issues/17718
  scipy>=1.7.0,!=1.10.0
jpeg2000 =
  glymur>=0.8.18,!=0.9.0,!=0.9.5
  lxml>=4.8.0
map =
  matplotlib>=3.5.0
  mpl-animators>=1.0.0
  reproject
  # !=1.10.0 due to https://github.com/scipy/scipy/issues/17718
  scipy>=1.7.0,!=1.10.0
net =
  beautifulsoup4>=4.8.0
  drms>=0.6.1
  python-dateutil>=2.8.0
  tqdm>=4.32.1
  zeep>=3.4.0
timeseries =
  cdflib>=0.3.19,!=0.4.0
  h5netcdf>=0.8.1
  # While a not direct dependency
  # We need to raise this to ensure the goes netcdf files open.
  h5py>=3.1.0
  matplotlib>=3.5.0
  pandas>=1.2.0
visualization =
  matplotlib>=3.5.0
  mpl-animators>=1.0.0
tests =
  hvpy>=1.0.1
  hypothesis>=6.0.0  # Included in pytest-astropy. 6.0 is the first version to support disabling function-scoped fixture warning
  jplephem  # For some coordinates tests
  opencv-python
  pytest-astropy>=0.8  # 0.8 is the first release to include filter-subpackage
  pytest-doctestplus>=0.5 # We require the newest version of doctest plus to use +IGNORE_WARNINGS
  pytest-mock
  pytest-mpl>=0.12 # First version to support our figure tests
  pytest-xdist>=2.0
  pytest>=6.0
docs =
  astroquery
  hvpy>=1.0.1
  jplephem
  opencv-python
  packaging
  reproject
  ruamel.yaml
  sphinx
  sphinx-automodapi
  sphinx-changelog>=1.1.1 # First to support towncrier 21.3
  sphinx-copybutton
  sphinx-design
  sphinx-gallery>=0.11.1 # First to fix https://github.com/sunpy/sunpy/issues/6377
  sphinxext-opengraph
  sunkit_image
  sunpy-sphinx-theme
  sphinx-hoverxref
  # Not a direct dependency, but we need to pin this until sphinx-changelog is updated (see #6668)
  towncrier<22.12.0

[options.packages.find]
exclude = sunpy._dev

[options.entry_points]
asdf.resource_mappings =
  sunpy = sunpy.io.special.asdf.entry_points:get_resource_mappings
asdf.extensions =
  sunpy = sunpy.io.special.asdf.entry_points:get_extensions

[bdist_wheel]
# the Py_LIMITED_API version hex in _pyana.c should match the version specified here
py_limited_api = cp39

[tool:pytest]
testpaths = "sunpy" "docs"
norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples" "sunpy[/\]_dev" ".jupyter" ".history" "tools" "sunpy[\/]extern" "benchmarks"
doctest_plus = enabled
doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
addopts = --dist no --arraydiff --doctest-rst --doctest-ignore-import-errors -p no:unraisableexception -p no:threadexception
asdf_schema_tests_enabled = true
asdf_schema_root = sunpy/io/special/asdf/resources/
mpl-results-path = figure_test_images
mpl-use-full-test-name = True
markers =
    remote_data: marks this test function as needing remote data.
    online: marks this test function as needing online connectivity.
    mpl_image_compare: marks this test function as using hash-based Matplotlib figure verification. This mark is not meant to be directly applied, but is instead automatically applied when a test function uses the @sunpy.tests.helpers.figure_test decorator.
    flaky
    array_compare
remote_data_strict = True
# Pin junit behaviour; we might want to update this to xunit2 at some point
junit_family=xunit1
filterwarnings =
    error
    # Do not fail on pytest config issues (i.e. missing plugins) but do show them
    always::pytest.PytestConfigWarning
    ignore:The sunpy.database module is no longer actively maintained
    # A list of warnings to ignore follows. If you add to this list, you MUST
    # add a comment or ideally a link to an issue that explains why the warning
    # is being ignored
    #
    # https://github.com/pytest-dev/pytest-cov/issues/557
    ignore:The --rsyncdir command line argument and rsyncdirs config variable are deprecated.:DeprecationWarning
    # Ignore this on our oldestdeps run that doesn't support the xdist_group marker
    ignore:Unknown pytest.mark.xdist_group
    # Fixed in https://github.com/h5netcdf/h5netcdf/pull/121
    ignore:distutils Version classes are deprecated
    # This is due to dependencies building with a numpy version different from
    # the local installed numpy version, but should be fine
    # See https://github.com/numpy/numpy/issues/15748#issuecomment-598584838
    ignore:numpy.ufunc size changed:RuntimeWarning
    ignore:numpy.ndarray size changed:RuntimeWarning
    # See https://github.com/mvantellingen/python-zeep/issues/956
    ignore:defusedxml.lxml is no longer supported:DeprecationWarning
    # See https://github.com/astropy/extension-helpers/issues/23
    ignore:Distutils was imported before Setuptools
    # Figure tests use agg backend so show doesn't work but we use it in peek
    ignore:Matplotlib is currently using agg, which is a non-GUI backend, so cannot show the figure.
    # Some tests use data that have dates in the future and ERFA does not like.
    ignore:ERFA function "d2dtf"*
    ignore:ERFA function "dtf2d"*
    # Currently helio makes unverified requests - this filter should be removed when
    # https://github.com/sunpy/sunpy/issues/4401 is fixed
    ignore:Unverified HTTPS request
    # https://github.com/astropy/astropy/issues/11272
    ignore:elementwise == comparison failed and returning scalar instead:FutureWarning:astropy.table
    # This isn't really an issue it's an annoyance, it's triggered by printing
    # an astropy table inside a test, which is generally only done when
    # debugging.
    ignore:the imp module is deprecated in favour of importlib:DeprecationWarning:ipykernel.iostream
    # We need to remove this when we set pytest to the next major version
    ignore:Passing None to catch any warning has been deprecated, pass no arguments instead
    # Ignore numpy warning in py37-oldestdeps figure tests
    ignore:invalid value encountered in greater:RuntimeWarning
    ignore:invalid value encountered in less:RuntimeWarning
    # This should be removed when astropy v5.0.5 is released (see astropy #13044)
    ignore:FLIP_TOP_BOTTOM is deprecated and will be removed in Pillow 10:DeprecationWarning
    # Deprecation warning added in ImageIO 2.16.2, called by scikit-image
    ignore:Starting with ImageIO v3 the behavior of this function will switch:DeprecationWarning
    # Appears in devdeps
    ignore:unable to download valid IERS file, using local IERS-B
    # See https://github.com/sunpy/drms/issues/72
    ignore:.*will attempt to set the values inplace instead of always setting a new array:FutureWarning
    # Zeep relies on deprecated cgi in Python 3.11
    ignore:'cgi' is deprecated and slated for removal in Python 3.13:DeprecationWarning:zeep.utils
    # Deprecation warning added in NumPy 1.24, triggered by scikit-image
    ignore:.*np.bool8.*is a deprecated alias.*:DeprecationWarning
    # Warnings for sqlalchemy 2.0. For now we pin the version and ignore this warning
    ignore:Deprecated API features detected.*SQLAlchemy 2

[pycodestyle]
max_line_length = 110

[flake8]
max-line-length = 110
exclude =
    .git,
    __pycache__,
    docs/conf.py,
    build,
    sunpy/data/sample.py,
    sunpy/extern/**,
    sunpy/__init__.py,
rst-directives =
    plot

[isort]
balanced_wrapping = True
skip=sunpy/extern/,sunpy/cm/__init__.py,docs/conf.py,sunpy/__init__.py
default_section = THIRDPARTY
include_trailing_comma = True
known_astropy = astropy, asdf
known_first_party = sunpy
length_sort = False
length_sort_sections=stdlib
line_length = 110
multi_line_output = 3
no_lines_before = LOCALFOLDER
sections = STDLIB, THIRDPARTY, ASTROPY, FIRSTPARTY, LOCALFOLDER

[coverage:run]
omit =
  sunpy/conftest.py
  sunpy/cython_version*
  sunpy/*setup*
  sunpy/extern/*
  sunpy/*/tests/*
  sunpy/version*
  sunpy/__init__*
  sunpy/data/sample.py
  sunpy/data/_sample.py
  sunpy/data/test/_generate_asdf_test.py
  */sunpy/conftest.py
  */sunpy/cython_version*
  */sunpy/*setup*
  */sunpy/extern/*
  */sunpy/*/tests/*
  */sunpy/version*
  */sunpy/__init__*
  */sunpy/data/sample.py
  */sunpy/data/_sample.py

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}

[codespell]
skip = *.asdf,*.fits,*.fts,*.header,*.json,*.xsh,*cache*,*egg*,*extern*,.git,.idea,.tox,_build,*truncated,*.svg
ignore-words-list =
    alog,
    nd,
    nin,
    observ,
    ot,
    te,
    upto
